2000-07-08  Thomas E. Dickey  <dickey@clark.net>

	* src/perror/perror.c: RCS_BASE

2000-03-26  Thomas E. Dickey  <dickey@clark.net>

	* src/newest/newest.c: oops - trim trailing blank on stdin's

	* src/newest/newest.c: RCS_BASE

2000-03-04  Thomas E. Dickey  <dickey@clark.net>

	* src/tisplit/timerge.c: oops - fclose() the input files

1999-08-19  dickey@clark.net

	* src/width/width.c: update usage for -q

	* src/width/width.c: fix a realloc size, and add -q option

	* src/width/width.c: add -s option to summarize percentages

1998-05-16  Thomas E. Dickey  <dickey@clark.net>

	* src/tisplit/tisplit.c, src/tisplit/timerge.c, src/tisplit/doit, src/tisplit/Makefile:
	RCS_BASE

1997-11-06  dickey@clark.net

	* src/newpath/newpath.c: add -f option to accommodate Java $CLASSPATH

1997-09-06  Thomas E. Dickey  <dickey@clark.net>

	* src/acsplit/acmerge.c: better test for comment.

	* src/acsplit/acsplit.c: better test for comment

	* src/acsplit/acmerge.c:
	adjusted to allow for having dashed lines in the parent file

	* src/acsplit/acsplit.c:
	make this a little smarter about header comments that contain sections
	separated by dashes (e.g., xterm)

1997-09-02  Thomas E. Dickey  <dickey@clark.net>

	* src/acsplit/acsplit.c:
	nit to avoid matching 'define()' unless the contents are bracketed with
	'[]'.

1997-08-31  Thomas E. Dickey  <dickey@clark.net>

	* src/slowcat/slowcat.c: allow option on pipe

1997-08-29  Thomas E. Dickey  <dickey@clark.net>

	* src/acsplit/acsplit.c: add 'define' keyword

1997-08-28  Thomas E. Dickey  <dickey@clark.net>

	* src/acsplit/acmerge.c, src/acsplit/doit, src/acsplit/Makefile, src/acsplit/acsplit.c:
	RCS_BASE

1997-07-06  Thomas E. Dickey  <dickey@clark.net>

	* src/slowcat/slowcat.c: write directly w/o buffering.
	add -<number> options

1997-06-10  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/chrcount.c:
	fix so we don't pick up non-files with the "-m" option

	* src/unmap/chrcount.c: RCS_BASE
